Modified the README to reflect reorganization

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,16 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+
+# Emacs
+*~
+
+# database
+*.db
+
+# pdf figures
+*.pdf
+
+# zipped and tarball files
+*.gz
+*.tar
