Config files working, as are the reading.  Need to fix the dimensions of the training samples

--- a/fitting/ICM_profiles/config_ini/temperature_test.ini
+++ b/fitting/ICM_profiles/config_ini/temperature_test.ini
@@ -1,11 +1,11 @@
 [DataBaseInfo]
-dbname = L500_NR_0
-dbdir =  /home/babyostrich/Documents/Repos/L500analysis/
+db_name = L500_NR_0
+db_dir =  /home/babyostrich/Documents/Repos/L500analysis/
 	       
 [LoadedTrainingData]
-aexps = [ 1.0, 0.9, 0.8,
-	  0.7, 0.6, 0.5,
-      	  0.45, 0.4, 0.35 ]
+aexps = [ 1.0, 0.9, 0.8,]
+#	  0.7, 0.6, 0.5,
+#      	  0.45, 0.4, 0.35 ]
 
 profiles_list = [ T_mw,T_mw/T200m, T_mw/T500c,
 	      	  r_mid,R/R200m,R/R500c ]
