--- a/fitting/ICM_profiles/config_ini/temperature_test.ini
+++ b/fitting/ICM_profiles/config_ini/temperature_test.ini
@@ -3,7 +3,7 @@ db_name = L500_NR_0
 db_dir =  /home/babyostrich/Documents/Repos/L500analysis/
 	       
 [LoadedTrainingData]
-aexps = [ 1.0, 0.9, 0.8,]
+aexps = [ 1.0, 0.9 ]
 #	  0.7, 0.6, 0.5,
 #      	  0.45, 0.4, 0.35 ]
 
